src/test/deca/codegen/invalid/modulo_par_0.deca
// Description :
//   test modulo par 0

// Résultats :
//   Error: division by zero
{
int x = 1;
x = x % 0;
print(x);
}